# ETL_Spimex_Benchmark

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/clients/: async_spimex_client.py  base_spimex_client.py  spimex_client.py  sync_spimex_client.py
src/core/: config.py  metrix.py
src/db/: async_bulletin_repository.py  async_session.py  bulletin_repository.py  models.py  session.py  sync_bulletin_repository.py  sync_session.py
src/parsers/: excel_parser.py  pdf_parser.py
src/schemas/: bulletin.py
src/services/: async_bulletin_service.py  base_bulletin_service.py  biluten_service.py  sync_bulletin_service.py
src/shemas/: bulletin.py
