[project]
name = "ETL-Spimex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.8",
    "xlrd>=2.0.2",
]
